added imgix logo

--- a/src/components/pages/styles.scss
+++ b/src/components/pages/styles.scss
@@ -32,4 +32,13 @@
     display: flex;
     justify-content: center;
   }
+
+  &__logo {
+    width: 150px;
+  }
+
+  &__header {
+    display: flex;
+    justify-content: center;
+  }
 }
